fixing the spacing on the navbar in edge

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -582,7 +582,7 @@ section {
 
 header nav {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;   
     width: 100%; 
     height: 100%; 
